# kotoshbot

.github/workflows/: ci.yml
kotoshbot_base/: CMakeLists.txt  package.xml
kotoshbot_base/include/kotoshbot_base/: debug.h
kotoshbot_base/include/kotoshbot_base/infrastructure/hardware/: DEV_Config.h  Debug.h
kotoshbot_base/src/: main.cpp
kotoshbot_base/src/infrastructure/hardware/: DEV_Config.c
