<?xml version="1.0"?>
<package format="3">
  <name>kotoshbot_base</name>
  <version>0.0.1</version>
  <description>Kotosh robot base package.</description>

  <maintainer email="ever@example.com">Ever</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

   <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
