<?xml version="1.0"?>
<package format="3">
  <name>kotoshbot_base</name>
  <version>0.0.1</version>
  <description>Kotosh robot base package.</description>

  <maintainer email="ever@example.com">Ever</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_common</test_depend>

   <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
